--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -10,7 +10,7 @@
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
           crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface|Alfa+Slab+One|Bevan|Bowlby+One|Changa+One|Lilita+One|Patua+One|Sigmar+One|Staatliches" rel="stylesheet"> 
     <link rel="stylesheet" href="%PUBLIC_URL%/custom.css">
     
     <base href="%PUBLIC_URL%/" />
@@ -32,31 +32,7 @@
     <title>PortfolioReactApp</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
-  <style>
-    html > body nav a.btn-info {
-      font-weight: bold;
-      background: lightblue !important;
-      border: none;
-      color: #1d1d1d;
-      box-shadow: 1px 1px 2px darkgrey;
-    }
-    html > body nav a.btn-info:hover {
-      background: #7a99a3 !important;
-    }
-  </style>
 </html>
