--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -19,6 +19,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>PortfolioReactApp</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
