Auto-select 1st proj, fix margins

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -10,7 +10,7 @@
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
           crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface|Alfa+Slab+One|Bevan|Bowlby+One|Changa+One|Lilita+One|Patua+One|Sigmar+One|Staatliches" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface" rel="stylesheet"> 
     
     <base href="%PUBLIC_URL%/" />
     <!--
