--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
           crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface" rel="stylesheet"> 
-    
-    <base href="%PUBLIC_URL%/" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface" rel="stylesheet">
+
+    <base href="https://nl253.github.io/Portfolio" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portfolio</title>
+    <title>Portfolio - Norbert Logiewa</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
