Try to fix URLs on gh-pages (2)

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface" rel="stylesheet">
 
-    <base href="https://nl253.github.io/Portfolio" />
+    <base href="%PUBLIC_URL%/Portfolio" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Portfolio - Norbert Logiewa</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
