Try to fix URLs on gh-pages (3)

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto|Abril+Fatface" rel="stylesheet">
 
-    <base href="%PUBLIC_URL%/Portfolio" />
+    <base href="%PUBLIC_URL%" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
